# rv6

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  Makefile  Makefile.toml  README.md  build.rs  justfile  riscv64gc-lp64d.json  rust-toolchain.toml
.cargo/: config.toml
cpio/: Cargo.toml
cpio/src/: lib.rs
crates/elf/: Cargo.toml
crates/ext2/: Cargo.toml
crates/fdt/: Cargo.toml
ext2/src/: blocks.rs  error.rs  fs.rs  inode.rs  lib.rs
fdt/: Cargo.toml
fdt/src/: lib.rs
fdt/tests/: integration.rs
kernel/: Cargo.toml  build.rs  riscv64gc-lp64d.json
kernel/.cargo/: config.toml
kernel/src/: initrd.rs  ksyms.S  ksyms.rs  lib.rs  macros.rs  main.rs  panic.rs  syscall.rs  syscalls.rs
kernel/src/arch/: hal.rs  mod.rs
kernel/src/arch/hal/: cpu.rs  mm.rs  proc.rs
kernel/src/arch/riscv/: addr.rs  earlycon.rs  entry.rs  head.S  instructions.rs  irq.rs  memory.rs  mmu.rs  mod.rs  proc.rs  registers.rs  sbi.rs  stackframe.rs  startup.S  time.rs  trap.S  trap.rs  uaccess.rs
kernel/src/arch/riscv/linker/: qemu.ld
kernel/src/arch/riscv/mm/: dma.rs  elf.rs  init.rs  mmio.rs  mod.rs  proc.rs
kernel/src/config/: milkv.rs  mod.rs  qemu.rs
kernel/src/drivers/: earlycon.rs  mod.rs  ns16550.rs  syscon.rs
kernel/src/drivers/irqchip/: mod.rs  sifive_plic.rs
kernel/src/drivers/syscon/: generic.rs  mod.rs
kernel/src/drivers/virtio/: blkdev.rs  mmio.rs  mod.rs  virtq.rs
kernel/src/mm/: addr.rs  dma.rs  mmio.rs  mod.rs
kernel/src/mm/addr/: dma.rs  phys.rs  virt.rs
kernel/src/mm/allocator/: bitmap.rs  bump.rs  mod.rs
kernel/src/mm/phys/: bitmap.rs  mod.rs
kernel/src/mm/virt/: address.rs
kernel/src/proc/: mod.rs
kernel/src/proc/elf/: mod.rs
kmm/: Cargo.toml
ksymsgen/: Cargo.toml
linkers/: riscv.ld
riscv/: Cargo.toml
rvalloc/: Cargo.toml
sbi/: Cargo.toml
script/: gen-ksyms.py  link-rv6.sh  make-initrd.sh
scripts/: make-initrd.sh
src/: lib.rs  macros.rs  main.rs  mmio.rs  panic.rs  testing.rs
userland/: Cargo.toml  Makefile  install.sh
(+76 files in other folders)
