[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
name = "rv6"
version = "0.1.0"

[lib]
crate-type = ["staticlib", "lib"]
name = "rv6"
path = "src/lib.rs"

[dependencies]
bitflags = "1.2.1"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.7.1"

[build-dependencies]
cc = "1.0"
