[package]
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
name = "rv6"
version = "0.1.0"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bitflags = "2.4.2"
fdt = { path = "../fdt" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
paste = "1.0.14"
spin = "0.9.8"

[build-dependencies]
cc = "1.0.83"

[features]

# MMU schemes
sv39 = []
sv48 = []

# Platforms
config-qemu = ["sv39"]
config-milkv = ["sv39"]
