[package]
name = "rv6"
version = "0.1.0"
authors = ["Pietro Lorefice <pietro.lorefice@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
bitflags = "2.4.2"
cpio = { path = "../crates/cpio" }
fdt = { path = "../crates/fdt" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
paste = "1.0.14"
spin = "0.10.0"

[build-dependencies]
cc = "1.0.83"

[features]
default = ["sv39"]

# MMU schemes
sv39 = []
sv48 = []
